--- a/samuSpring/src/main/resources/application.properties
+++ b/samuSpring/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-# JPA(Java Persistence API): descreve uma interface comum para frameworks de persistência de dados
+# JPA(Java Persistence API): descreve uma interface comum para frameworks de persistÃªncia de dados
 # Hibernate: framework para o mapeamento objeto-relacional escrito na linguagem Java
 
 # Configuration we need in order to connect into a database (from Spring Boot Data JPA)
 spring.datasource.url=jdbc:postgresql://localhost:5432/samu
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=
+spring.datasource.password=
 # Clean state every time that runs the application:
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
